[gd_scene load_steps=6 format=3 uid="uid://bepthki51qwup"]

[ext_resource type="Script" uid="uid://blnmu2nwa1y2i" path="res://Scripts/Gameplay/HUD/control.gd" id="1_8hx18"]
[ext_resource type="PackedScene" uid="uid://2ieahs4qt14v" path="res://Scenes/Gameplay/HUD/touch_controls.tscn" id="2_kuuf2"]
[ext_resource type="Script" uid="uid://crcr8jtqc2pil" path="res://Scripts/Gameplay/HUD/HUD.gd" id="3_s0cjp"]
[ext_resource type="Texture2D" uid="uid://dm4u3hmrwaxmu" path="res://Game Assets/guns_gameassets/PNG/shotgun.png" id="4_l18jw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yth3r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8hx18")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuButton" type="Button" parent="Menu"]
offset_right = 57.0
offset_bottom = 31.0
scale = Vector2(2.19225, 2.27682)
text = "MENU
"

[node name="MenuPanel" type="Panel" parent="Menu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -239.0
offset_right = -162.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.78829, 3.91214)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MenuPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "RESUME
"

[node name="SettingsButton" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="TouchControls" parent="." instance=ExtResource("2_kuuf2")]
layer = 2

[node name="Pickup Gun" parent="TouchControls" index="2"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -162.0
offset_right = 1.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0

[node name="Reload Gun" parent="TouchControls" index="3"]
offset_left = 751.0
offset_top = 400.0
offset_right = 839.0
offset_bottom = 452.0

[node name="Switch Gun" parent="TouchControls" index="4"]
offset_left = 609.0
offset_top = 496.0
offset_right = 704.0
offset_bottom = 527.0
scale = Vector2(1.77633, 2.01982)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_s0cjp")

[node name="AmmoLabel" type="Label" parent="HUD"]
offset_left = 634.0
offset_top = 467.0
offset_right = 754.0
offset_bottom = 490.0
text = "Ammo: -- / --"
metadata/_edit_use_anchors_ = true

[node name="ReloadProgress" type="ProgressBar" parent="HUD"]
visible = false
modulate = Color(0, 1, 1, 1)
offset_left = 615.0
offset_top = 561.0
offset_right = 768.0
offset_bottom = 588.0
max_value = 1.0
show_percentage = false

[node name="ReloadBarLabel" type="Label" parent="HUD/ReloadProgress"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 3.0
offset_right = 130.0
offset_bottom = 26.0
text = "RELOADING..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="GunDisplay" type="Node" parent="HUD"]

[node name="Panel" type="Panel" parent="HUD/GunDisplay"]
offset_left = 608.0
offset_top = 494.0
offset_right = 779.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yth3r")
metadata/_edit_use_anchors_ = true

[node name="CurrentGunIcon" type="TextureRect" parent="HUD/GunDisplay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.5
offset_top = 5.0
offset_right = 127.112
offset_bottom = 45.0
grow_horizontal = 2
texture = ExtResource("4_l18jw")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="CurrentGunLabel" type="Label" parent="HUD/GunDisplay/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -49.0
offset_right = 47.0
grow_horizontal = 2
grow_vertical = 0
text = "Sample Gun"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Menu/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]

[editable path="TouchControls"]
